syntax = "proto3";

package order;

// One item in an order
message OrderItem {
  int32 item_id = 1;
  int32 quantity = 2;
}

// Request to place an order
message OrderRequest {
  repeated OrderItem items = 1;
}

// Response confirming order placement
message OrderConfirmation {
  int32 order_id = 1;
  string status = 2;
}

// Request to get order status
message OrderStatusRequest {
  int32 order_id = 1;
}

// Response with full order details
message OrderStatus {
  int32 order_id = 1;
  string status = 2;
  repeated OrderItem items = 3;
}

// Message for chat feature
message ChatMessage {
  string user = 1;
  string message = 2;
}

// Service with both unary and bidirectional streaming
service OrderFulfillmentService {
  rpc PlaceOrder(OrderRequest) returns (OrderConfirmation);
  rpc GetOrderStatus(OrderStatusRequest) returns (OrderStatus);
  rpc Chat(stream ChatMessage) returns (stream ChatMessage);
}
